<resources>
    <string name="app_name">ToDoList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="no_data">Nothing to see here ? </string>

    <string name="title">Title</string>
    <string name="description">Description</string>

    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>

    <string name="add_new_task_todo">Add new task todo</string>
    <string name="nothing_to_see_here">Nothing to see here !</string>
    <string name="enter_a_title">enter a title</string>
    <string name="write_your_task_here">write your task here</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="search">search</string>
    <string name="sort_by">sort By</string>
    <string name="priority_high">Priority High</string>
    <string name="priority_medium">Priority Medium</string>
    <string name="priority_low">Priority Low</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="click_here_to_begin">Click here to begin !</string>
</resources>