<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".fragments.add.AddFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_title"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.abe.todolist.customViews.TDMultiLine
            android:id="@+id/title_et"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="text"
            android:padding="@dimen/et_padding"
            android:textSize="@dimen/et_textSize" />
    </com.google.android.material.textfield.TextInputLayout>


    <Spinner
        android:id="@+id/priorities_spinner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:entries="@array/priorities"
        app:layout_constraintBottom_toTopOf="@id/task_entery_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_container" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_entery_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:hint="@string/write_your_task_here"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priorities_spinner">

        <com.abe.todolist.customViews.TDMultiLine
            android:id="@+id/description_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:padding="@dimen/et_padding"
            android:textSize="@dimen/et_textSize" />


    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/date_time_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/task_entery_container"
        app:layout_constraintTop_toBottomOf="@+id/priorities_spinner"
        tools:layout_editor_absoluteX="24dp">

        <ImageButton
            android:id="@+id/time_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:contentDescription="@string/set_time"
            android:src="@drawable/time"
            android:text="@string/time"
            app:tint="#777" />
        <TextView
            android:visibility="invisible"
            android:id="@+id/selectedTime"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            />


        <ImageButton
            android:id="@+id/date_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="120dp"
            android:clickable="true"
            android:contentDescription="@string/set_date"
            android:src="@drawable/date"
            android:text="@string/date"
            app:tint="#777" />
        <TextView
            android:visibility="invisible"
            android:id="@+id/selectedDate"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>